zebra-state/src/service/finalized_state/disk_format/tests/snapshots/hash_by_height_raw_data@testnet-0.snap
---
source: zebra-state/src/service/finalized_state/disk_format/tests/snapshot.rs
assertion_line: 153
expression: cf_data

---
[
  KV(
    k: "00000000",
    v: "382c4a332661c7ed0671f32a34d724619f086c61873bce7c99859dd9920aa605",
  ),
]
