zebra-state/src/service/finalized_state/disk_format/tests/snapshots/hash_by_tx_loc_raw_data@mainnet_1.snap
---
source: zebra-state/src/service/finalized_state/disk_format/tests/snapshot.rs
expression: cf_data
---
[
  KV(
    k: "0000000000",
    v: "db4d7a85b768123f1dff1d4c4cece70083b2d27e117b4ac2e31d087988a5eac4",
  ),
  KV(
    k: "0000010000",
    v: "0946edb9c083c9942d92305444527765fad789c438c717783276a9f7fbf61b85",
  ),
]
