zebra-state/src/service/finalized_state/disk_format/tests/snapshots/height_by_hash_raw_data@empty.snap
---
source: zebra-state/src/service/finalized_state/disk_format/tests/snapshot.rs
assertion_line: 117
expression: cf_data

---
[]
